@@ -1,0 +1,21 @@
+// Stock.custom - customizations to Gtk.Stock
+//
+// Authors: Mike Kestner  <mkestner@ximian.com>
+//
+// Copyright (c) 2004 Novell, Inc.
+
+		[DllImport("libgtk-win32-2.0-0.dll")]
+		static extern IntPtr gtk_stock_list_ids ();
+
+		public static string[] ListIds ()
+		{
+			IntPtr raw_ret = gtk_stock_list_ids ();
+			if (raw_ret == IntPtr.Zero)
+				return new string [0];
+			GLib.List list = new GLib.List(raw_ret, typeof (string));
+			string[] result = new string [list.Count];
+			for (int i = 0; i < list.Count; i++)
+				result [i] = (string) list [i];
+			return result;
+		}
+
