@@ -11865,7 +11865,7 @@
       <method name="GetLineOffset" cname="gtk_text_iter_get_line_offset">
         <return-type type="gint" />
       </method>
-      <method name="GetMarks" cname="gtk_text_iter_get_marks">
+      <method name="GetMarks" cname="gtk_text_iter_get_marks" hidden="1">
         <return-type type="GSList*" />
       </method>
       <method name="GetOffset" cname="gtk_text_iter_get_offset">
@@ -11880,7 +11880,7 @@
           <parameter type="const-GtkTextIter*" name="end" />
         </parameters>
       </method>
-      <method name="GetTags" cname="gtk_text_iter_get_tags">
+      <method name="GetTags" cname="gtk_text_iter_get_tags" hidden="1">
         <return-type type="GSList*" />
       </method>
       <method name="GetText" cname="gtk_text_iter_get_text">
@@ -11889,7 +11889,7 @@
           <parameter type="const-GtkTextIter*" name="end" />
         </parameters>
       </method>
-      <method name="GetToggledTags" cname="gtk_text_iter_get_toggled_tags">
+      <method name="GetToggledTags" cname="gtk_text_iter_get_toggled_tags" hidden="1">
         <return-type type="GSList*" />
         <parameters>
           <parameter type="gboolean" name="toggled_on" />
@@ -13120,7 +13120,7 @@
           <parameter type="guint" name="n_items" />
         </parameters>
       </method>
-      <method name="ListIds" cname="gtk_stock_list_ids" shared="true">
+      <method name="ListIds" cname="gtk_stock_list_ids" shared="true" hidden="1">
         <return-type type="GSList*" />
       </method>
       <method name="Lookup" cname="gtk_stock_lookup" shared="true">
